--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
     - uses: TG908/fork-sync@v1.1.4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.SYNC_FORK }}
