--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -13,3 +13,6 @@ jobs:
     - uses: TG908/fork-sync@v1.1.4
       with:
         github_token: ${{ secrets.SYNC_FORK }}
+        owner: a1ip
+        base: master
+        head: master
