--- a/.github/workflows/syncfork.yml
+++ b/.github/workflows/syncfork.yml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: TG908/fork-sync@v1.1.4
+    - uses: TG908/fork-sync@v1.1.5
       with:
-        github_token: ${{ secrets.SYNC_FORK }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         owner: jsonbible
-        base: master
-        head: master
